--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,10 @@
   "type": "module",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js",
+    "dev": "nodemon server.js",
+    "db:seed": "node seed/data.js"
   },
   "keywords": [
     "journal",
@@ -23,6 +26,9 @@
     "express": "^4.18.3",
     "mongoose": "^8.2.2",
     "morgan": "^1.10.0",
+    "nodemon": "^3.1.0"
+  },
+  "devDependencies": {
     "nodemon": "^3.1.0"
   }
 }
